# p2p-game-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  rustdoc.yml
examples/: tictactoe.rs
examples/tictactui/: Cargo.toml
examples/tictactui/img/: ticatctui.webm
examples/tictactui/src/: app.rs  game.rs  input.rs  main.rs  session.rs  ui.rs
examples/tictactui/src/components/: board.rs  chat.rs  logs.rs  side_panel.rs
examples/tictactui/src/screens/: game.rs  home.rs  lobby.rs
src/: error.rs  iroh.rs  lib.rs  logic.rs  peer.rs  player.rs  room.rs  state.rs
src/room/: actions.rs  chat.rs  events.rs  queries.rs  setup.rs  snapshot.rs  state.rs  ticket.rs
src/room/events/: actions.rs  connections.rs  entries.rs  event_loop.rs  network.rs  process.rs  ui.rs
src/room/state/: actions.rs  game_key.rs  lifecycle.rs  metadata.rs  queries.rs
tests/: common.rs  integration_test.rs  player_disconnection.rs
