[package]
name = "p2p-game-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
tokio = { version = "1" }
iroh = "0.95"
iroh-docs = { version = "0.95.0" }
iroh-blobs = { version = "0.97" }
iroh-gossip = { version = "0.95" }
bytes = "1"
num_cpus = { version = "1.15.0" }
tokio-util = { version = "0.7" }
rand = "0.9.2"
tempfile = "3.20.0"
n0-future = "0.3.1"
postcard = { version = "1.1.3", features = ["use-std"] }
thiserror = "2.0.17"

[dev-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
