[package]
name = "p2p-game-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1" }
iroh = { version = "0.98.2" }
iroh-docs = { version = "0.98.0" }
iroh-blobs = { version = "0.100.0" }
iroh-gossip = { version = "0.98.0" }
bytes = "^1"
n0-future = "0.3.1"
postcard = { version = "^1.1.3", features = ["use-std"] }
anyhow = "^1"
thiserror = "^2.0.18"
serde_json = "1"

[dev-dependencies]
tokio-util = "0.7.18"
tempfile = "^3.20.0"
clap = { version = "^4.5.51", features = ["derive"] }
futures = "^0.3.31"

[features]
default = ["iroh"]
iroh = []
