[package]
name = "tictactui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
crossterm = "0.29"
iroh = "0.98.1"
p2p-game-engine = { path = "../.." }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.18"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
